opam-version: "1.2"
maintainer: "frederic.bour@lakaban.net"
authors: [
  "Frédéric Bour <frederic.bour@lakaban.net>"
  "Alain Frisch <alain.frisch@lexifi.com>"
]
license: "MIT"
homepage: "https://github.com/let-def/ppx_tools_versioned"
bug-reports: "https://github.com/let-def/ppx_tools_versioned/issues"
dev-repo: "git://github.com/let-def/ppx_tools_versioned.git"
tags: [ "syntax" ]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [["dune" "runtest" "-p" name "-j" jobs]]
depends: [
  "dune" {build & >= "1.0"}
  "ocaml-migrate-parsetree" { >= "1.0.10" }
]
available: ocaml-version >= "4.02.0"
